--- a/MuSES/configs/M1_config.yaml
+++ b/MuSES/configs/M1_config.yaml
@@ -7,7 +7,8 @@ model:
 training:
   batch_size: 64
   epochs: 3
-  learning_rate: 5e-6
+  learning_rate_backbone: 5e-6
+  learning_rate_heads: 1e-4
   temperature: 0.07
   doc_size: 4
   loss_alpha: 0.5
